<resources>
    <string name="app_name">Mooditude</string>
    <string name="mooditude">mooditude</string>
    <string name="happy_you">A Happier You!</string>
    <string name="continue_text">continue</string>
    <string name="title_activity_account_registration">AccountRegistrationActivity</string>
    <string name="join_mooditude">Join Mooditude</string>
    <string name="you_deserve">You deserve to be happy!</string>
    <string name="hint_name">Your Name</string>
    <string name="hint_promo_code">Please enter code here.</string>
    <string name="next_text">next</string>
    <string name="already_have_accnt">Already have an account? Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_exists">Email exists</string>
    <string name="hint_email">Your email e.g. you@domain.com</string>
    <string name="hint_password">Password</string>
    <string name="signup">Sign Up</string>
    <string name="hint_reenter_password">Renter Password</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="mismatch_password">Passwords do not match</string>
    <string name="create_account">Create Account</string>
    <string name="creating_account">Creating account...</string>
    <string name="account_created">Your acccout is created</string>
    <string name="congratulations">Congratulations!!</string>
    <string name="error_text">Error</string>
    <string name="saving_information">Saving information</string>
    <string name="login">Log In</string>
    <string name="signin_in">Signing in....</string>
    <string name="please_use_email">Please use an email that you can access from this device. We will send you a verification link that you will have to open on this device.</string>
    <string name="forgot_password_recover">Recover password</string>
    <string name="not_have_accnt_signup">Don’t have an account?  Sign up</string>
    <string name="reset_pwd">Reset Password</string>
    <string name="instruction_sent">Instruction Sent</string>
    <string name="check_ur_mail">Please check your email for the instructions to reset your password.</string>
    <string name="please_wait">Please wait…</string>
    <string name="loggin_in">Please wait…</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_user">You are now a Moodituder!</string>
    <string name="you_taken"><![CDATA[Get ready to see significant improvement in your mental wellbeing.<p/><p/>
        Let\'s personalize Mooditude for you!]]></string>
    <string name="goal_title">What do you want to achieve?</string>
    <string name="goal_desc">Please select just one, the most important goal.</string>
    <string name="age_title">How old are you?</string>
    <string name="below_age_desc">Since you\'re under 18, get permission from your parents before you use this app. (Just let me know what you\'re up to.)</string>
    <string name="goal_sleep">Sleep better</string>
    <string name="goal_sleep_desc">We get it; without a good night\'s sleep, it is a struggle to get through the day. We\'ll help you build a routine that will improve your sleep.</string>
    <string name="goal_handle_stress">Handle stress</string>
    <string name="goal_handle_stress_desc">Despite being unpleasant, the stress in itself is not an illness. But there are connections between stress and mental health conditions. We\'ll introduce you to self-care techniques for managing stress.</string>
    <string name="goal_master">Master depression</string>
    <string name="goal_master_desc">Depression is the absence of hope. That very deadened feeling, which is so very different from feeling sad. We\'ll introduce you to the tools and techniques that you can use to live with depression.</string>
    <string name="goal_overcome">Overcome anxiety</string>
    <string name="goal_overcome_desc">Anxiety is a beast. But you can defeat it without medication. We\'ll help you create a mind-body connection to change your behavior, lifestyle, and thought patterns resulting in a calmer and happier life.</string>
    <string name="goal_control">Control Anger</string>
    <string name="goal_control_desc">"Anger is a natural response to a threat. It became a problem when you have difficulty controlling it. We\'ll give you coping activities that you can use when you feel hurt, annoyed, or disappointed. "</string>
    <string name="goal_boost">Boost self-esteem</string>
    <string name="goal_boost_desc">Things that hold us back to pursue our dreams is the confidence to overcome the fear of failure. We\'ll show you ways to dismiss negative thoughts, know your inner-self, and build a positive image.</string>
    <string name="goal_live">Live happier</string>
    <string name="goal_live_desc">We will help you find your own NORTH STAR by introducing you to the skills needed to deal with people, handle unforeseeable events, and building mind-body connection for a fulfilling life.</string>
    <string name="gender_title">What\'s your gender?</string>
    <string name="gender_1">Male</string>
    <string name="gender_2">Female</string>
    <string name="gender_3">Transgender</string>
    <string name="gender_4">Non-binary</string>
    <string name="gender_5">Other</string>
    <string name="i_have_consent">I\'ve consent from my guardians</string>
    <string name="challenges_title">What\'s the biggest roadblock in your way?</string>
    <string name="challenges_desc">Select one or more</string>
    <string name="challenge_people">People</string>
    <string name="challenge_work">Work</string>
    <string name="challenge_health">Health</string>
    <string name="challenge_money">Money</string>
    <string name="challenge_me">Me</string>
    <string name="health_professional_title">Are you working with any mental health professional?</string>
    <string name="hp_yes">Yes</string>
    <string name="hp_yes_desc">Wonderful. You can use Mooditude as a companion app between the therapy sessions. Tell your therapist about Mooditude.</string>
    <string name="hp_no">No</string>
    <string name="hp_no_desc">"That\'s okay. Use Mooditude\'s self-paced programs to learn life-changing skills. "</string>
    <string name="CBT_title">Are you familiar with Cognitive Behavioral Therapy (CBT)?</string>
    <string name="cbt_no_desc">No worries, we will show you how Mooditude and CBT works.</string>
    <string name="cbt_yes">Yes</string>
    <string name="cbt_no">No</string>
    <string name="cbt_yes_desc"></string>
    <string name="make_promise_title">Make a Promise</string>
    <string name="make_promise_desc">You will get the quickest results with consistency. Are you ready to fit in 10 minutes a day for amazing changes in your mental wellbeing?</string>
    <string name="promise1_title">Yes</string>
    <string name="promise1_desc">Great! Stay tuned for positive changes in your mental health within a few days</string>
    <string name="promise2_title">No</string>
    <string name="promise2_desc">Let\'s start with only 2 minutes a day</string>
    <string name="remind_title">Set Reminders</string>
    <string name="remind_desc">It\'s so easy to lose track of time. We\'ll help you keep your promise by reminding you to keep your commitment.</string>
    <string name="remind_me">Remind Me</string>
    <string name="select_theme_desc">We’re preparing Mooditude, just for you. Meanwhile, why don’t you have some fun!</string>
    <string name="select_theme_title">Pick your favorite color</string>
    <string name="congrats">Congrats!</string>
    <string name="congrats_desc">You\'ve already accomplished so much.</string>
    <string name="you_recognized_mental_health">You prioritized your mental health goals</string>
    <string name="you_identify_road_block">You identified the obstacles to your happiness</string>
    <string name="you_commited">You committed to taking care of yourself</string>
    <string name="we_r_proud">High five! 🙌</string>
    <string name="default_notification_channel_id">channel_1</string>
    <string name="fcm_message">Moody Message</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="home_navigation_drawer_open">Open navigation drawer</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Need Help?</string>
    <string name="science_behind_assessment">Science Behind the Assessment</string>
    <string name="pagetitle_home">Home</string>
    <string name="pagetitle_community">Community</string>
    <string name="pagetitle_selfcare">Self-care</string>
    <string name="pagetitle_tracking">Tracking</string>
    <string name="pagetitle_care">Health</string>
    <string name="menu_home">Home</string>
    <string name="menu_community">Community</string>
    <string name="menu_selfcare">Self-care</string>
    <string name="menu_tracking">Tracking</string>
    <string name="menu_care">Health</string>
    <string name="full_report">Full report</string>
    <string name="three_mins">3 mins</string>
    <string name="got_code">Do you have a Sponsor’s Code?</string>
    <string name="confirm">Confirm</string>
    <string name="see_past_assessment">Past Assessment</string>
    <string name="take_an_assessment">Take an Assessment</string>
    <string name="options">Options</string>
    <string name="skip">Skip</string>
    <string name="your_wellbeing_score"><![CDATA[Your Mental<br/>Wellbeing Score]]></string>
    <string name="we_use_score">We use your wellbeing score to match you with the perfect therapist.</string>
    <string name="use_this_assessment">use this score</string>
    <string name="retake_assessment">RE-TAKE Assessment</string>
    <string name="how_would_you_pay">How would you pay for the services?</string>
    <string name="how_you_pay_desc"><![CDATA[<b>Your initial consultation with the in-take specialist is FREE.</b><p/><p/>
       If you decide to work with the matched therapist, you will pay directly to the provider. On average, it could be between $100 and $350 per session. Many therapists accept insurance.]]></string>
    <string name="payment_method_unknown">Don’t know yet</string>
    <string name="payment_method_insurance">Insurance</string>
    <string name="payment_method_cash">Cash</string>
    <string name="title_consent">Consent</string>
    <string name="consent_desc"><![CDATA[I understand that Mooditude will share my personal information and assessment report with conunseling providers to facilitate the match.<p/><p/>
       By tapping Authorize and Submit, I acknowledge the terms and authorize that my information will be shared.]]></string>
    <string name="authorize_and_submit"><![CDATA[Authorize & submit]]></string>
    <string name="received_your_request">We’ve received your request.</string>
    <string name="member_of_provider_will_contact_you">A provider\'s care team member will contact you the next working day.</string>
    <string name="representative_called">representaTive Called</string>
    <string name="waiting_for_call">WAITING For Call</string>
    <string name="menu_journal">Journal</string>
    <string name="select">Select</string>
    <string name="text_fresh">Fresh</string>
    <string name="text_popular">Popular</string>
    <string name="text_active">Active</string>
    <string name="text_your_posts">Your Posts</string>
    <string name="text_your_bookmarks">Your Bookmarks</string>
    <string name="text_reported">Reported</string>
    <string name="text_edit">Edit</string>
    <string name="text_report">Report</string>
    <string name="text_delete">Delete</string>
    <string name="text_about">About</string>
</resources>