<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_menu_home"
        android:title="@string/menu_home" />

    <item
        android:id="@+id/navigation_community"
        android:icon="@drawable/ic_menu_community"
        android:title="@string/menu_community" />

    <item
        android:id="@+id/navigation_selfcare"
        android:icon="@drawable/ic_menu_selfcare"
        android:title="@string/menu_selfcare" />

    <item
        android:id="@+id/navigation_tracking"
        android:icon="@drawable/ic_menu_tracking"
        android:title="@string/menu_tracking" />

    <item
        android:id="@+id/navigation_care"
        android:icon="@drawable/ic_menu_care"
        android:title="@string/menu_care" />

</menu>