<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="5dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        style="@style/BottomSheetItem"
        android:text="@string/options"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/circularstd_black"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/menu_full_report"
        style="@style/BottomSheetItem"
        android:text="@string/full_report"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/menu_see_past_assessment"
        style="@style/BottomSheetItem"
        android:text="@string/see_past_assessment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@+id/menu_full_report" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/menu_add_new"
        style="@style/BottomSheetItem"
        android:text="@string/take_an_assessment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@+id/menu_see_past_assessment" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/menu_science"
        style="@style/BottomSheetItem"
        android:text="@string/science_behind_assessment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@+id/menu_add_new" />
</androidx.constraintlayout.widget.ConstraintLayout>