<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingStart="@dimen/_15sdp"
    android:paddingEnd="@dimen/_15sdp"
    tools:context=".fragment.requesttherapist.CurrentAssessmentFragment">

    <include
        android:id="@+id/assessment_topbar"
        layout="@layout/view_assessment_topbar" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/TitleTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:lineSpacingMultiplier="1.2"
        android:text="@string/your_wellbeing_score" />

    <TextView
        android:id="@+id/tv_desc"
        style="@style/DescTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        android:lineSpacingMultiplier="1.2"
        android:text="@string/we_use_score"
        android:textColor="@color/primaryColor" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_use_this"
        style="@style/RegBtnStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:text="@string/use_this_assessment" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_retake"
        style="@style/RegBtnStyle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20sdp"
        android:text="@string/retake_assessment" />


</LinearLayout>