<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/_15sdp"
    tools:context=".activity.ui.care.MainFragment">


    <TextView
        android:id="@+id/tv_title"
        style="@style/TitleTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        android:text="@string/title_consent" />

    <TextView
        android:id="@+id/tv_desc"
        style="@style/DescTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingMultiplier="1.3"
        android:layout_marginBottom="@dimen/_30sdp"
        android:textSize="@dimen/_12ssp"
        android:text="@string/consent_desc"
        android:textColor="@color/primaryColor" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_submit"
        style="@style/RegBtnStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/authorize_and_submit" />
</LinearLayout>